# tuts

pydantic-ai-masterclass/: hello.py  pyproject.toml
pydantic-ai-masterclass/1-introduction/: 1.3-agent-ollama.py  1.5-multi-model-agents.py
pydantic-ai-masterclass/3-structured-data/: 3.3-invoice.py  3.4-resume.py
pydantic-ai-masterclass/4-system-prompts/: 4.4-invoice.py  4.5-dynamic-basic.py  4.6-dynamic-advanced.py
pydanticai-graph-deepseek-r1/: DOCUMENTATION.md  hello.py  product-decision-graph.py  pyproject.toml
