[project]
name = "pydantic-ai-masterclass"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "asyncio==3.4.3",
    "colorama==0.4.6",
    "dataclasses==0.6",
    "devtools==0.12.2",
    "html-to-markdown==1.1.0",
    "logfire>=3.2.0",
    "openai==1.58.1",
    "pydantic-ai==0.0.15",
    "python-dotenv>=1.0.1",
]
