[project]
name = "pydanticai-graph-deepseek-r1"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "asyncio==3.4.3",
    "beautifulsoup4>=4.12.3",
    "colorama==0.4.6",
    "dataclasses==0.6",
    "devtools==0.12.2",
    "html-to-markdown==1.1.0",
    "openai>=1.60.2",
    "pydantic-ai==0.0.20",
    "pydantic-graph>=0.0.20",
    "python-dotenv>=1.0.1",
    "tavily-python>=0.5.0",
]
